# python_rst_scratch

./: .readthedocs.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: style_custom.css
docs/guide/: guide_apso.rst  guide_zaz_pip_install.rst  index.rst  lo_install_pip_windows.rst  lo_portable_install_pip_windows.rst  lo_python_venv_env.rst  windows_install_pkg_zaz_pip.rst  windows_poetry_env.rst
docs/guide/virtual_env/: index.rst  linux_flatpak_automate_lo.rst  linux_flatpak_lo_pip.rst  linux_lo_install_pip_flatpak.rst  linux_manual_venv.rst  linux_manual_venv_snap.rst  lo_install_pip_windows.rst  lo_portable_install_pip_windows.rst  windows_install_pkg_zaz_pip.rst  windows_poetry_env.rst
docs/internal/dict/: spelling_code.txt
docs/poetry/: index.rst  poetry_env.rst
docs/roles/: custom_roles.txt
docs/scratch/: go_figure_https.rst  go_figure_local.rst  go_img.rst  index.rst  scratch.rst  tute_ss.rst
