[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rst-scratch"
version = "0.1.0"
description = "Restructured Text Scratch Editor"
license = "MIT"
readme = "README.md"
authors = [
    ":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"
]
keywords = ["rst", "restruecturedtext", "scratch"]
homepage = "https://github.com/Amourspirit/python_rst_scratch"
documentation = "https://github.com/Amourspirit/python_rst_scratch"
repository = "https://github.com/Amourspirit/python_rst_scratch"

classifiers = [
    "Topic :: Office/Business",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.7"
sphinx-toolbox = ">=3.2.0"
sphinx-tabs = ">=3.4.1"
sphinx-rtd-dark-mode = ">=1.2.4"
sphinx-autodoc-typehints = ">=1.19.4"
sphinxcontrib-spelling = ">=7.6.2"
sphinx_design = ">=0.3.0"
esbonio = ">=0.14.1"
