[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rst-scratch"
version = "0.1.1"
description = "Restructured Text Scratch Editor"
license = "MIT"
readme = "README.md"
authors = [
    ":Barry-Thomas-Paul: Moss <bigbytetech@gmail.com>"
]
keywords = ["rst", "restruecturedtext", "scratch"]
homepage = "https://github.com/Amourspirit/python_rst_scratch"
documentation = "https://github.com/Amourspirit/python_rst_scratch"
repository = "https://github.com/Amourspirit/python_rst_scratch"

classifiers = [
    "Topic :: Office/Business",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
sphinx-toolbox = ">=3.4.0"
sphinx-tabs = ">=3.4.1"
sphinx-rtd-dark-mode = ">=1.2.4"
sphinx-autodoc-typehints = ">=1.23.0"
sphinxcontrib-spelling = ">=8.0.0"
esbonio = ">=0.16.1"
sphinx-design = "^0.4.1"
sphinx = "^6.2.1"

[tool.ruff]
extended-select=["ANN", "C4", "N", "SIM", "TCH"]
ignore=[]
show-fixes=true
target="py39"